--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1430,3 +1430,28 @@ keywords = {variance estimation, spectral analysis, simulation, confidence inter
   language = {en},
   number = {4}
 }
+
+@article{Maksimovic2020,
+  title = {A Cross-Package {{Bioconductor}} Workflow for Analysing Methylation Array Data [Version 3; Peer Review: 4 Approved]},
+  author = {Maksimovic, Jovana and Phipson, Belinda and Oshlack, Alicia},
+  year = {2020},
+  volume = {5},
+  doi = {10.12688/f1000research.8839.3},
+  file = {/home/alan/Zotero/storage/Q6MDS35H/5529c8af-85c8-491e-896e-a5c54ec6ec08_8839_-_jovana_maksimovic_v3.pdf},
+  journal = {F1000Research},
+  number = {1281}
+}
+
+@article{Casella1985,
+  title = {An {{Introduction}} to {{Empirical Bayes Data Analysis}}},
+  author = {Casella, George},
+  year = {1985},
+  month = may,
+  volume = {39},
+  pages = {83},
+  issn = {00031305},
+  doi = {10.2307/2682801},
+  file = {/home/alan/Zotero/storage/2TFBGKG2/Casella - 1985 - An Introduction to Empirical Bayes Data Analysis.pdf},
+  journal = {The American Statistician},
+  number = {2}
+}
